# ProjectDriveMng

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  ProjectDriveMng.sln  README.md
CommonLib/: CommonLib.vcxproj  CommonLib.vcxproj.filters  CommonLibDef.hpp
ConsoleExtensions/: ConsoleExtensions.vcxproj  ConsoleExtensions.vcxproj.filters  ConsoleExtensionsDef.cpp
DotNetConsoleExtensions/: Controls.cs  MenuMessage.cs
DotNet_ProjectDriveMng/DotNetConsoleExtensions/: DrawConsole.cs  MenuMng.cs  Menus.cs
DotNet_ProjectDriveMng/ProjectDriveConsole/: Program.cs  ProjectDriveConsole.csproj
DotNet_ProjectDriveMng/ProjectMng/: Project.cs
DriveLib/: DriveLib.vcxproj  DriveLib.vcxproj.filters  DriveLibDef.hpp
ProjectDriveMng/: CMakeLists.txt
ProjectDriveMng/Console/: CMakeLists.txt  ProjectDriveMngVersion.hpp  VersionDataBase.cpp  VersionDataBase.hpp  main.cpp
ProjectDriveMng/Libs/: CMakeLists.txt
ProjectDriveMng/Libs/ArcDrive/: ArcLibVersion.hpp  ArcLibVersionTools.hpp  ArcMng.hpp  CMakeLists.txt
ProjectDriveMng/Libs/ArcDrive/Config/: ArcConfig.cpp  ArcConfig.hpp  ArcConfigTools.cpp  ArcConfigTools.hpp  ConfigData.cpp  ConfigData.hpp  Datatypes.hpp
ProjectDriveMng/Libs/ArcDrive/Drive/: ArcDrive.cpp  ArcDrive.hpp
ProjectDriveMng/Libs/DatabaseManager/: CMakeLists.txt
ProjectDriveMng/Libs/DriveManager/: CMakeLists.txt
ProjectDriveMng/Libs/Imported/: CMakeLists.txt
ProjectDriveMng/Libs/Imported/ConsoleExtensions/: CMakeLists.txt  ConsoleExtVersion.hpp  ConsoleExtVersionTools.hpp
ProjectDriveMng/Libs/Imported/ConsoleExtensions/ConsoleColorizedString/: ColorString.cpp  ColorString.hpp  ColorWstring.cpp  ColorWstring.hpp  ConsoleColorString.hpp  EnumColors.hpp  LICENSE.txt  README.md  StringExt.cpp  StringExt.hpp
ProjectDriveMng/Libs/Imported/ConsoleExtensions/ConsoleDataTypes/: ConsoleDataTypes.hpp
ProjectDriveMng/Libs/Imported/ConsoleExtensions/ConsoleExtControls/: AsciiControls.hpp  AsciiSGR.hpp  ConsoleControls.hpp  LICENSE.txt  LowLevelControls.cpp  LowLevelControls.hpp  README.md
ProjectDriveMng/Libs/Imported/ConsoleExtensions/ConsoleExtInterface/: AsciiGraphicInterface.hpp  ConsoleExtInterface.cpp  ConsoleExtInterface.hpp  README.md
ProjectDriveMng/Libs/Imported/ConsoleExtensions/ErrorReport/: ConsoleExtException.hpp  README.md
ProjectDriveMng/Libs/Imported/VersionLib/: CMakeLists.txt
ProjectDriveMng/Libs/MngConfig/: CMakeLists.txt  MngConfig.hpp  MngConfigVersion.hpp
ProjectDriveMng/Libs/MngConfig/Config/: ArcConfig.cpp  ArcConfig.hpp  ArcConfigTools.cpp  ArcDriveConfig.hpp  ConfigData.hpp  Datatypes.hpp
ProjectDriveMng/Libs/ProjectRepositoryManager/: CMakeLists.txt
ProjectDriveMngConsole/: ProjectDriveMngConsole.vcxproj  ProjectDriveMngConsole.vcxproj.filters  main.cpp
ProjectsLib/: Project.hpp  ProjectLibDef.hpp  ProjectsLib.vcxproj  ProjectsLib.vcxproj.filters  pch.h
SQL/: Access_ProjAberto.sql  Access_ProjCancelado.sql  Access_TarefasAberta.sql  Access_TodosProj.sql
Scripts/: BackupProjectDb.ps1  BackupProjectDd.ps1
Tools/: CMakeLists.txt
Tools/ProjectDriveBackup/: Backup.ps1  BackupProjectDrive.py
Tools/RemoteLinkSelector/: CMakeLists.txt  commands.cpp  commands.hpp  config.cpp  config.hpp  definitions.hpp  directory.cpp  directory.hpp  main.cpp  menus.cpp  menus.hpp  places.cpp  places.hpp
